--- a/Microblog/Modules/UserDetail/UserDetail.storyboard
+++ b/Microblog/Modules/UserDetail/UserDetail.storyboard
@@ -29,30 +29,47 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="UserListTitleCell" id="bS7-Qi-25D" customClass="UserListTitleCell" customModule="Microblog" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="UserDetailPostCell" id="bS7-Qi-25D" customClass="UserDetailPostCell" customModule="Microblog" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="90"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="90"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Users" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YvR-k6-1Kb">
-                                                    <rect key="frame" x="20" y="0.0" width="374" height="90"/>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="sunt aut facere repellat provident occaecati excepturi optio reprehenderit" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YvR-k6-1Kb">
+                                                    <rect key="frame" x="20" y="0.0" width="374" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="QE6-ta-lly"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DGz-e0-er9">
+                                                    <rect key="frame" x="20" y="42" width="374" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="Omw-dZ-VZI"/>
+                                                    </constraints>
+                                                    <string key="text">quia et suscipit\nsuscipit recusandae consequuntur expedita et cum\nreprehenderit molestiae ut ut quas totam\nnostrum rerum est autem sunt rem eveniet architecto</string>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="YvR-k6-1Kb" secondAttribute="bottom" id="FmV-Kk-t8E"/>
+                                            <constraint firstItem="DGz-e0-er9" firstAttribute="leading" secondItem="bS7-Qi-25D" secondAttribute="leading" constant="20" id="6Xq-82-CM2"/>
                                             <constraint firstAttribute="trailing" secondItem="YvR-k6-1Kb" secondAttribute="trailing" constant="20" id="VL6-Ah-I1I"/>
+                                            <constraint firstItem="DGz-e0-er9" firstAttribute="top" secondItem="YvR-k6-1Kb" secondAttribute="bottom" constant="2" id="XOG-Dj-Udc"/>
+                                            <constraint firstItem="DGz-e0-er9" firstAttribute="bottom" secondItem="bS7-Qi-25D" secondAttribute="bottomMargin" id="di4-Fa-tdM"/>
                                             <constraint firstItem="YvR-k6-1Kb" firstAttribute="leading" secondItem="bS7-Qi-25D" secondAttribute="leading" constant="20" id="fYo-YK-7lN"/>
+                                            <constraint firstAttribute="trailing" secondItem="DGz-e0-er9" secondAttribute="trailing" constant="20" id="pQK-Kz-5YF"/>
                                             <constraint firstItem="YvR-k6-1Kb" firstAttribute="top" secondItem="bS7-Qi-25D" secondAttribute="top" id="rsE-le-kyf"/>
                                         </constraints>
                                         <size key="customSize" width="414" height="90"/>
                                         <connections>
-                                            <outlet property="titleLabel" destination="YvR-k6-1Kb" id="u6v-mO-Yc1"/>
+                                            <outlet property="previewLabel" destination="DGz-e0-er9" id="l1I-xK-gRt"/>
+                                            <outlet property="titleLabel" destination="YvR-k6-1Kb" id="fSW-Lz-vEd"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -61,6 +78,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="pfJ-Ax-2jr"/>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="ilC-2V-lkF" id="Ur7-CH-Nda"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hml-lD-6pr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
